fix reader double scrollbar on mobile

--- a/client/my-sites/sidebar/style.scss
+++ b/client/my-sites/sidebar/style.scss
@@ -1099,7 +1099,8 @@ $font-size: rem(14px);
 		}
 
 		.focus-content:not(.has-no-sidebar):not(.has-no-masterbar) .layout__content {
-			padding-top: 47px;
+			padding-top: 46px;
+			padding-bottom: 0;
 		}
 
 		// client/layout/sidebar/style.scss
